# devflow-lite

./: .gitignore  CLAUDE.md  README.md  install.sh  install_config.py  install_skills.py  pyproject.toml
.github/workflows/: tests.yml
commands/: devflow.md  unspec.md
devflow/: __init__.py  main.py  test___init__.py  test_main.py
devflow/init/: __init__.py  detector.py  kb_query.py  manifest.py  planner.py  postmortem.py  retry.py  runner.py  subagent.py  test_detector.py  test_kb_query.py  test_manifest.py  test_planner.py  test_retry.py  test_run_init.py  test_runner.py  test_subagent.py
docs/: INTERNAL.md  PKB_E2E_CHECKLIST.md  PKB_PROMPT.md  PKB_SLICE3_FOLLOWUP.md  global-rules.md  universal_prompt.md
hooks/: __init__.py  _judge_inputs.py  _paths.py  _session.py  _sg.py  _stdin_cache.py  _util.py  branch_policy.py  codeowners_check.py  concurrent_edit_lock.py  context_monitor.py  cross_author_edit_guard.py  discovery_scan.py  freshness_check.py  merge_safety.py  phase_finalize.py  post_task_judge.py  pr_template.py  pre_edit_overwrite_guard.py  pre_push_gate.py  repo_conventions.py  secrets_gate.py  spec_phase_tracker.py  spec_stop_guard.py  state_cleanup.py  stop_dispatcher.py  tdd_enforcer.py  test_branch_policy.py  test_codeowners_check.py  test_concurrent_edit_lock.py  test_cross_author_edit_guard.py  test_deletion_guard.py  test_freshness_check.py  test_merge_safety.py  test_phase_finalize.py  test_pr_template.py  test_pre_edit_overwrite_guard.py  test_repo_conventions.py  test_spec_phase_tracker.py  test_spec_stop_guard.py  (+6 more)
judge/: evaluator.py  parser.py  router.py  rubric.py  test_evaluator.py  test_rubric.py
linters/: engine.py
scripts/: deploy_dashboard.sh  devflow_init.py  devflow_init_login.py  devflow_status.py  gc_phantom_rows.py  run_judge_on_diff.py  seed_kb_from_memoria.py  setup_client.sh  state_cleanup.py  unspec.py
sg-rules/: python-no-os-path-join.yml  python-no-string-paths.yml
skills/devflow-behavior-contract/: SKILL.md
skills/devflow-spec-driven-dev/: SKILL.md
tests/: test__shadow_audit.py  test_browser_operator.py  test_install_config_no_ghost_refs.py  test_install_skills_global_rules.py  test_judge_loop_guard.py
tests/integration/: test_cloud_heal_loop.py
