[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "devflow-lite"
version = "0.2.1"
description = "DevFlow Lite — slim guardrail harness for Claude Code (no telemetry, no cloud, no LLM judge)."
requires-python = ">=3.12"
readme = "README.md"
license = { text = "MIT" }
authors = [{ name = "Vinicius Freitas" }]
keywords = ["claude-code", "ai-agents", "knowledge-base", "governance", "tdd"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Operating System :: OS Independent",
]
dependencies = []

[project.urls]
Homepage = "https://github.com/viniciuscffreitas/devflow"
Repository = "https://github.com/viniciuscffreitas/devflow"

[tool.setuptools]
packages = [
    "devflow",
    "hooks",
    "linters",
    "scripts",
]
include-package-data = true

[dependency-groups]
dev = [
    "pytest>=9.0.3",
    "ruff>=0.15.12",
]
